# jwt-generator

./: .example.env  Cargo.toml
src/: concatenate.rs  errors.rs  header.rs  lib.rs  payload.rs
