[package]
name = "jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64-url = "3.0.0"
dotenv = "0.15.0"
hex = "0.4.3"
hex-literal = "1.0.0"
hmac = "0.12.1"
load-dotenv = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
simple-base64 = "0.23.2"
